# openshift-ai-security-dashboard

./: .gitignore  API_STATUS.md  Makefile  README.md  openshift-ai-security-prd.md  openshift_ai_security.db  pyproject.toml  requirements.txt
src/: __init__.py  app.py  config.py
src/api/: __init__.py  pyxis.py  security.py
src/database/: __init__.py  connection.py  models.py
src/services/: __init__.py  cve_analyzer.py  data_refresh.py  export.py
src/ui/: __init__.py  cves.py  dashboard.py  historical.py  images.py
src/utils/: cache.py  formatters.py
tests/: __init__.py  conftest.py
tests/test_api/: test_pyxis.py
tests/test_database/: test_models.py
tests/test_services/: test_cve_analyzer.py
